fix: nowrap

--- a/src/globals.css
+++ b/src/globals.css
@@ -256,6 +256,7 @@ ol[data-lang]>li>code {
     border-inline-start-width: 1px;
     border-inline-start-style: solid;
     border-inline-start-color: currentColor;
+    white-space: nowrap;
 }
 hr {
     block-size: 1px;
